--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,6 +5,11 @@ $red: #FD1015;
 $blue: #0D6EFD;
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+$very-dark-green: #1B6560;
+$dark-green: #2A857F;
+$green: #3FA7A0;
+$light-green: #84D7D1;
+$very-light-green: #CDECEA;
