home almost done

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,11 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+
+h1, h2, h3 {
+  font-family: 'Abril Fatface';
+}
+
+p{
+  font-family: 'Roboto', sans-serif;
+}
