--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,16 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h2>Our recommandations</h2>
+
+<div class="card-container">
+  <div class="travel-card">
+    <%= image_tag('santorin.jpg', width: 150, height: 150) %>
+    <p class="city-name">Santorin</p>
+  </div>
+  <div class="travel-card">
+    <%= image_tag('tokyo.webp', width: 150, height: 150) %>
+    <p class="city-name">Tokyo</p>
+  </div>
+  <div class="travel-card">
+    <%= image_tag('bali.jpeg', width: 150, height: 150) %>
+    <p class="city-name">Bali</p>
+  </div>
+</div>
