--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
     <p class="city-name">Tokyo</p>
   </div>
   <div class="travel-card">
-    <%= image_tag('bali.jpeg', width: 150, height: 150) %>
+    <%= image_tag('bali.png', width: 150, height: 150) %>
     <p class="city-name">Bali</p>
   </div>
 </div>
