almost done index

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,7 +4,9 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "button";
-@import "sidenavbar";
+@import "sidebar";
+@import "budgetslider";
+@import "card";
 
 
 h1, h2, h3 {
