--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,15 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.3/nouislider.min.css' %>
-    <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.3/nouislider.min.js' %>
-    <%= javascript_include_tag 'https://code.jquery.com/jquery-3.6.0.min.js' %>
-    <%= javascript_include_tag 'application' %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
+  <%= render "layouts/navbar" %>
   <%= render "shared/flashes" %>
     <%= yield %>
+  <%= render "layouts/footer" %>
+
   </body>
 </html>
