--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,15 +4,15 @@
   <h2>Our recommandations</h2>
   <div class="card-container">
     <div class="travel-card">
-      <%= image_tag('santorin.jpg', width: 150, height: 150) %>
+      <%= image_tag('santorini.jpg', width: 150, height: 150) %>
       <p class="city-name">Santorin</p>
     </div>
     <div class="travel-card">
-      <%= image_tag('tokyo.webp', width: 150, height: 150) %>
+      <%= image_tag('tokyo.jpg', width: 150, height: 150) %>
       <p class="city-name">Tokyo</p>
     </div>
     <div class="travel-card">
-      <%= image_tag('bali.png', width: 150, height: 150) %>
+      <%= image_tag('bali.jpg', width: 150, height: 150) %>
       <p class="city-name">Bali</p>
     </div>
   </div>
