--- a/app/assets/stylesheets/components/_homepage.scss
+++ b/app/assets/stylesheets/components/_homepage.scss
@@ -1,3 +1,11 @@
+.content {
+  margin: 0 150px;
+
+  h2{
+    margin-top: 30px;
+  }
+}
+
 .card-container {
   display: flex;
   justify-content: space-between;
