working on the style of the navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -16,3 +16,13 @@
   top: 10;
   left: 150px;
 }
+
+.navbar-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between  ;
+}
+
+nav {
+  background-color: #3FA7A0;
+}
