--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -13,3 +13,20 @@
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   }
 }
+
+.button-dark-green {
+  background-color: $very-dark-green;
+  color: white;
+  font-weight: bold;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
+
+  &:hover {
+    background-color: $light-green;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    color: $very-dark-green;
+  }
+}
