--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -20,7 +20,9 @@
 .navbar-top {
   display: flex;
   align-items: center;
-  justify-content: space-between  ;
+  justify-content: space-between;
+  height: 100px; /* Nouvelle hauteur souhaitée */
+  margin: auto;
 }
 
 nav {
