--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,10 +5,9 @@
     <% end %>
     <h2 class="navbar-heading">Find your next adventure</h2>
     <ul class="nav navbar-nav navbar-right ml-auto">
-      <li id="navbar-link"><button type="button" class="button m-4"><%= link_to 'Sign in', '#' %></li></button>
+      <li id="navbar-link"><button type="button" class="button m-4"><%= link_to 'Sign in', '#' %></button></li>
     </ul>
   </div>
-
 
   <div class="navbar-bottom">
     <div class="row justify-content-center">
@@ -19,7 +18,7 @@
               class: " searchbar form-control rounded-pill mr-2 p-2",
               placeholder: "Where do you want to travel"
             %>
-          <%= submit_tag "Search", name: "", class: "btn orange-btn rounded-pill" %>
+          <%= submit_tag "Search", name: "", class: "button-dark-green" %>
         <% end %>
       </div>
     </div>
