--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,4 +1,11 @@
+.container-fluid {
+//   display: flex;
+}
+
 .card-trip {
+  display: grid;
+  grid-gap: 16px;
+  flex-grow: 1;
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
