--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,3 +1,4 @@
+<%= render "/layouts/navbar" %>
   <div class="container-fluid">
     <div class="row">
       <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
