--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,3 +1,5 @@
+<%= render "/layouts/navbar" %>
+
 <div class="container">
   <h1><%= @trip.planner.first_name %> <%= @trip.planner.last_name %></h1>
   <h2><%= @trip.title %></h2>
