--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <%= render "/layouts/navbar_searchbar" %>
 
-<div class="content">
-  <h2>Our recommandations</h2>
+<div class="content my-3">
+  <h2 class="text-center pb-4">Our recommandations of the day:</h2>
   <div class="card-container">
     <div class="travel-card">
       <%= image_tag('santorini.jpg', width: 150, height: 150) %>
