--- a/app/assets/stylesheets/components/_budgetslider.scss
+++ b/app/assets/stylesheets/components/_budgetslider.scss
@@ -43,7 +43,7 @@
   width: 50%;
   height: 10px;
   max-width: 400px;
-  background-color: $very-light-green;
+  background-color: $light-green;
   float: left;
   margin: 0;
   padding: 0;
