--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,9 +2,14 @@
 //   display: flex;
 }
 
-.card-trip {
+.card-trip-grid {
+  margin: 25px auto;
   display: grid;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 16px;
+}
+
+.card-trip {
   flex-grow: 1;
   overflow: hidden;
   background: white;
@@ -43,4 +48,21 @@
   right: 16px;
   top: -20px;
   width: 40px;
+}
+
+.card-planner {
+  text-align: right;
+  font-size: 10px;
+  color: $green;
+}
+
+a {
+  text-decoration: none;
+  color: $very-dark-green;
+  transition: 0.3s;
+
+}
+
+a:hover {
+  color: $green;
 }
