--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -1,6 +1,7 @@
 .sidebar {
   padding-bottom: 25px;
   position: sticky;
+  background-color: $very-light-green;
 }
 
 .sidebar h4{
@@ -28,7 +29,7 @@
   width: 16px;
   height: 16px;
   border: 1px solid grey;
-  background-color: #ddd;
+  background-color: #ffffff;
   border-radius: 3px;
   margin-right: 10px;
   vertical-align: middle;
@@ -40,20 +41,20 @@
   border-color: grey;
 }
 
-.form-check-input:checked + .form-check-label::after {
-  content: '\2713';
-  display: inline-block;
-  position: absolute;
-  left: 4px;
-  top: 0;
-  color: white;
-  font-size: 14px;
-  line-height: 14px;
-  width: 16px;
-  height: 16px;
-  text-align: center;
-  vertical-align: middle;
-  background-color: $dark-green;
-  border-radius: 3px;
-  margin-right: 10px;
-}
+// .form-check-input:checked + .form-check-label::after {
+//   content: '\2713';
+//   display: inline-block;
+//   position: absolute;
+//   left: 4px;
+//   top: 0;
+//   color: white;
+//   font-size: 14px;
+//   line-height: 14px;
+//   width: 16px;
+//   height: 16px;
+//   text-align: center;
+//   vertical-align: middle;
+//   background-color: $dark-green;
+//   border-radius: 3px;
+//   margin-right: 10px;
+// }
