--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,7 +3,7 @@
 // For example:
 $red: #FD1015;
 $blue: #0D6EFD;
-$yellow: #FFC65A;
+$yellow: #FFD600;
 $orange: #E67E22;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
