--- a/app/views/layouts/_navbar_searchbar.html.erb
+++ b/app/views/layouts/_navbar_searchbar.html.erb
@@ -1,5 +1,5 @@
 <nav>
-  <div class="navbar-top">
+  <div class="navbar-top justify-content-between align-items-center">
     <a href="<%= root_path %>">
       <%= image_tag('logo.png', width: 150, height: 150) %>
     </a>
@@ -12,13 +12,13 @@
   <div class="navbar-bottom">
     <div class="row justify-content-center">
       <div class="col-sm-8 my-3">
-        <%= form_with url: trips_path, method: :get, class: "d-flex" do %>
+        <%= form_with url: trips_path, method: :get, class: "d-flex align-items-center" do %>
           <%= text_field_tag :query,
               params[:query],
-              class: " searchbar form-control rounded-pill mr-2 p-2",
+              class: "searchbar form-control rounded-pill mr-2 p-2",
               placeholder: "Where do you want to travel"
             %>
-          <%= submit_tag "Search", name: "", class: "button-dark-green" %>
+          <%= submit_tag "Search", name: "", class: "button-dark-green rounded-pill" %>
         <% end %>
       </div>
     </div>
