--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -15,6 +15,7 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   max-width: 400px;
+  border-radius: 5px;
 }
 
 .card-trip > img {
