--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,15 +1,15 @@
 <%= render "/layouts/navbar" %>
 
 <div class="container">
-  <h1><%= @trip.planner.first_name %> <%= @trip.planner.last_name %></h1>
-  <h2><%= @trip.title %></h2>
+  <h1><strong><%= @trip.planner.first_name %> <%= @trip.planner.last_name %></strong></h1>
+  <h2><strong><%= @trip.title %></strong></h2>
   <p><%= @trip.comment %></p>
   <%= image_tag @trip.image_url %>
   <div class="destinations">
-    <% @trip.destinations.order(:position).each do |destination| %>
+    <% @trip.trip_destinations.each do |trip_destination| %>
       <div class="destination">
-        <p><%= destination.address %></p>
-        <p><%= destination.description %></p>
+        <h4><strong><%= trip_destination.destination.address %></strong></h4>
+        <p><%= trip_destination.destination.description %></p>
       </div>
     <% end %>
     <div>
