--- a/app/assets/stylesheets/components/_budgetslider.scss
+++ b/app/assets/stylesheets/components/_budgetslider.scss
@@ -3,59 +3,113 @@
 //   margin-top: 15px;
 // }
 
-.min {
-  float: left;
-}
+// .min {
+//   float: left;
+// }
 
-.max {
-  float: right;
-}
+// .max {
+//   float: right;
+// }
 
-.min-max {
-  width: 90%;
-  max-width: 200px;
-  margin: 0 auto;
-  padding: 25px 0 15px 0;
-}
+// .min-max {
+//   width: 90%;
+//   max-width: 200px;
+//   margin: 0 auto;
+//   padding: 25px 0 15px 0;
+// }
 
-.min-max label {
-  font-size: 12px;
-  float: left;
-  margin-right: 5px;
-  line-height: 1.6;
-}
+// .min-max label {
+//   font-size: 12px;
+//   float: left;
+//   margin-right: 5px;
+//   line-height: 1.6;
+// }
 
-.min-max span {
-  // font-size: 10px;
-  // text-align: center;
-  display: inline-block;
-  width: 30px;
-  border: 1px solid $green;
-}
+// .min-max span {
+//   // font-size: 10px;
+//   // text-align: center;
+//   display: inline-block;
+//   width: 30px;
+//   border: 1px solid $green;
+// }
 
-.min-max-range {
-  padding: 30px 0 20px 0;
-}
+// .min-max-range {
+//   padding: 30px 0 20px 0;
+// }
 
-.range {
-  -webkit-appearance:none;
-  appearance: none;
-  width: 50%;
-  height: 10px;
-  max-width: 400px;
-  background-color: $light-green;
-  float: left;
+// .range {
+//   -webkit-appearance:none;
+//   appearance: none;
+//   width: 50%;
+//   height: 10px;
+//   max-width: 400px;
+//   background-color: $light-green;
+//   float: left;
+//   margin: 0;
+//   padding: 0;
+//   outline: none;
+// }
+
+// .range::-webkit-slider-thumb {
+//   -webkit-appearance:none;
+//   appearance: none;
+//   background-color: $dark-green;
+//   border-radius: 50%;
+//   height: 15px;
+//   width: 15px;
+//   cursor: pointer;
+// }
+
+* {
   margin: 0;
   padding: 0;
-  outline: none;
+  box-sizing: border-box;
 }
 
-.range::-webkit-slider-thumb {
-  -webkit-appearance:none;
+.budget-slider {
+  padding: 20px 40px;
+  max-width: 20rem;
+}
+
+.range-slider {
+  position: relative;
+  width: 100%;
+  height: 5px;
+  margin: 30px 0;
+  background-color: $light-green;
+}
+
+.slider-tracker {
+  height: 100%;
+  position: absolute;
+  background-color: red;
+}
+
+.range-slider input {
+  position: absolute;
+  width: 100%;
+  background: none;
+  pointer-events: none;
+  top: 50%;
+  transform: translateY(-50%);
   appearance: none;
-  background-color: $dark-green;
-  border-radius: 50%;
+}
+
+input[type="range"]::-webkit-slider-thumb {
   height: 15px;
   width: 15px;
-  cursor: pointer;
+  border: 1px solid $green;
+  border-radius: 50%;
+  background: $green;
+  pointer-events: auto;
+  appearance: none;
+}
+
+.input-box {
+  display: flex;
+}
+
+.min-box,
+.max-box {
+  width: 50%;
 }
