--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<%= render "/layouts/navbar_searchbar" %>
+<%= render "/layouts/navbar" %>
+<%= render "layouts/searchbar" %>
 
 <div class="content my-3">
   <h2 class="text-center pb-4">Our recommandations of the day:</h2>
