--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,5 @@
 @import "components/footer";
 @import "components/homepage";
 
-@import "components/show"
+@import "components/show";
+@import "components/searchbar"
