--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,4 +1,5 @@
-<%= render "/layouts/navbar_searchbar" %>
+<%= render "/layouts/navbar" %>
+<%= render "layouts/searchbar" %>
 
   <div class="container-fluid">
     <div class="row">
