--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -13,7 +13,7 @@
       </div>
     <% end %>
     <div>
-      <button type ="button" class="button-dark-green-show"><%= link_to 'Contact the planner', '#', class: "link-btn-container" %></button>
+      <%= link_to 'Contact the planner', my_trips_path , class: "link-btn-container button-dark-green-show" %>
     </div>
   </div>
 </div>
