--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,16 +1,23 @@
 <%= render "/layouts/navbar" %>
-<%= render "layouts/searchbar" %>
+<% render "layouts/searchbar" %>
 
+<%= simple_form_for :filter, url: trips_path, method: :get do |f| %>
+  <div class="searchbar-container">
+    <div class="row justify-content-center searchbar-container">
+      <div class="col-sm-8 my-3">
+        <%= f.input :title, label: false, placeholder: 'Where do you want to go?', class: "searchbar form-control rounded-pill mr-2 p-2"%>
+      </div>
+      <%= f.submit %>
+    </div>
+  </div>
   <div class="container-fluid">
     <div class="row">
       <nav class="col-md-4 col-lg-2 d-md-block sidebar">
         <%= render "/layouts/budgetslider" %>
         <hr>
 
-        <%= simple_form_for :filter, url: trips_path, method: :get do |f| %>
             <h4 class="my-3">Trip Styles</h4>
             <%= f.input :style, legend_tag: false, as: :check_boxes, collection: Trip.where.not(style: nil).pluck(:style).uniq.map { |style| [style.capitalize, style] } %>
-            <%= f.submit %>
         <% end %>
       </nav>
 
