--- a/app/views/layouts/_budgetslider.html.erb
+++ b/app/views/layouts/_budgetslider.html.erb
@@ -15,7 +15,7 @@
       <div class="tooltip min-tooltip"></div>
       <div class="tooltip max-tooltip"></div>
     </div>
-    <div class="input-box">
+    <%# <div class="input-box">
       <div class="min-box">
         <div class="input-wrap">
           <span class="input-addon">€</span>
@@ -28,5 +28,5 @@
           <input type="text" name="max-input" class="input-field max-input">
         </div>
       </div>
-    </div>
+    </div> %>
 </div>
