--- a/app/assets/stylesheets/components/my_trips.scss
+++ b/app/assets/stylesheets/components/my_trips.scss
@@ -10,5 +10,50 @@
 }
 .column {
   width: 33%;
-  margin: 10px;
+  padding: 10px;
+}
+
+.messages {
+}
+
+.right {
+  margin: 5px 5px 5px 40px;
+}
+
+.left {
+  margin: 5px 40px 5px 5px;
+}
+
+.message {
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px;
+  justify-content: flex-end;
+
+  &>p {
+    margin: 0px;
+  }
+}
+
+.my_conversations ul {
+  list-style-type: none;
+  margin-bottom: 5px;
+  padding: 0px;
+  li {
+    background-color: white;
+    border-radius: 5px;
+    padding: 5px;
+  }
+}
+
+#new_messages {
+  // position: fixed;
+  left: 0;
+  bottom: 0;
+  background-color: white;
+  height: 100px;
+  width: 100%;
+  border-radius: 5px;
+  border: 1px solid black;
+
 }
