--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -12,13 +12,10 @@
         <p><%= trip_destination.destination.description %></p>
       </div>
     <% end %>
-    <div>
-      <%= link_to 'Contact the planner', my_trips_path , class: "link-btn-container button-dark-green-show" %>
-    </div>
   </div>
 
   <div class="button-container">
-    <%= link_to 'Contact the planner', my_trips_path(trip_id:@trip.id), class: "button-dark-green-show", data: { turbo_method: :post } %>
+    <%= link_to 'Contact the planner', my_trips_path(trip_id:@trip.id), class: "link-btn-container button-dark-green-show", data: { turbo_method: :post } %>
   </div>
 
 </div>
