--- a/app/views/layouts/_budgetslider.html.erb
+++ b/app/views/layouts/_budgetslider.html.erb
@@ -1,13 +1,5 @@
 <div class="budget-slider">
   <h4 range-title>Budget</h4>
-    <%# <div class="min-max">
-        <div class="min">
-          <label>Min</label><span id="min-value"></span>
-        </div>
-        <div class="max">
-          <label>Max</label><span id="max-value"></span>
-        </div>
-    </div> %>
     <div class="range-slider">
       <span class="slider-track"></span>
       <input type="range" min="0" max="5000" value="2000" class="range" id="min">
@@ -15,7 +7,7 @@
       <div class="tooltip min-tooltip"></div>
       <div class="tooltip max-tooltip"></div>
     </div>
-    <div class="input-box">
+    <%# <div class="input-box">
       <div class="min-box">
         <div class="input-wrap">
           <span class="input-addon">€</span>
@@ -28,5 +20,5 @@
           <input type="text" name="max-input" class="input-field max-input">
         </div>
       </div>
-    </div>
+    </div> %>
 </div>
