--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,13 +1,18 @@
 <%= render "/layouts/navbar" %>
-<% render "layouts/searchbar" %>
 
 <%= simple_form_for :filter, url: trips_path, method: :get do |f| %>
   <div class="searchbar-container">
-    <div class="row justify-content-center searchbar-container">
-      <div class="col-sm-8 my-3">
-        <%= f.input :title, label: false, placeholder: 'Where do you want to go?', class: "searchbar form-control rounded-pill mr-2 p-2"%>
+    <div class="d-flex justify-content-center searchbar-container">
+      <div class="w-70 d-flex">
+        <div class="w-70">
+          <%= f.input :title, label: false,
+            placeholder: 'Where do you want to go?',
+            input_html: { class: "searchbar form-control rounded-pill mr-2 py-2 w-100", style: "width: 80%;" } %>
+        </div>
+        <div class="w-15">
+          <%= f.submit class: "button-dark-green rounded-pill w-100 mx-3" %>
+        </div>
       </div>
-      <%= f.submit %>
     </div>
   </div>
   <div class="container-fluid">
