--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav>
-  <div class="navbar-top">
+  <div class="navbar-top navbar-height-<%= hauteur %>" >
     <a href="<%= root_path %>">
-      <%= image_tag('logo.png', width: 150, height: 150) %>
+      <%= image_tag('logo.png', class: "img-navbar-height-#{hauteur}") %>
     </a>
     <h2 class="navbar-heading">Find your next adventure</h2>
     <ul class="nav navbar-nav navbar-right ml-auto">
