--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= render "/layouts/navbar" %>
+<%= render "/layouts/navbar", hauteur: "20"  %>
 <%= render "layouts/searchbar" %>
 
 <div class="content my-3">
