--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,10 +5,17 @@
   justify-content: space-between;
   padding: 0px 50px;
   color: white;
-  height: 65px;
-  margin-top: auto;
+  // margin-top: auto;
   bottom: 0;
   width: 100%;
+}
+.footer-relative {
+  position: relative;
+  height: 100px;
+}
+.footer-absolute {
+  position: absolute;
+  height: 10%;
 }
 .footer-links {
   display: flex;
@@ -32,5 +39,5 @@
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  // min-height: 100vh;
 }
