--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -21,9 +21,24 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px; /* Nouvelle hauteur souhaitée */
   margin-top: 30px;
   margin-bottom: 20px;
+}
+
+.img-navbar-height-100 {
+  width: 150px
+}
+
+.img-navbar-height-20 {
+  width: 100px
+}
+
+.navbar-height-20 {
+  height: 20px;
+}
+
+.navbar-height-100 {
+  height: 100px;
 }
 
 nav {
