--- a/app/views/my/trips/show.html.erb
+++ b/app/views/my/trips/show.html.erb
@@ -1,82 +1,68 @@
+<%= render "/layouts/navbar", hauteur: "20" %>
 <h1>My trips</h1>
 
 <div class="my_trip_container">
   <div class="my_conversations column">
-    <% @trips.each do |trip| %>
-
-
-
+    <div class="scrollable-content" id="column1">
       <ul>
-        <% if current_user.id == trip.planner.id && trip.planner.id != trip.tripper.id %>
-          <%= link_to my_trip_path(trip) do %>
-            <li>
-              <%= trip.tripper.first_name %> <%= trip.tripper.last_name %><br><%= trip.title %>
-            </li>
-          <% end %>
-        <% elsif current_user.id == trip.tripper.id && trip.planner.id != trip.tripper.id %>
-          <%= link_to my_trip_path(trip) do %>
-            <li>
-              <%= trip.planner.first_name %> <%= trip.planner.last_name %><br><%= trip.title %>
-            </li>
+        <% @trips.each do |trip| %>
+          <% if current_user.id == trip.planner.id && trip.planner.id != trip.tripper.id %>
+            <%= link_to my_trip_path(trip), id: (trip.id == @trip.id ? 'my_conversation' : nil) do %>
+              <li>
+                <strong><%= trip.title %></strong><br><%= trip.tripper.first_name %> <%= trip.tripper.last_name %>
+              </li>
+            <% end %>
+          <% elsif current_user.id == trip.tripper.id && trip.planner.id != trip.tripper.id %>
+            <%= link_to my_trip_path(trip), id: (trip.id == @trip.id ? 'my_conversation' : nil) do %>
+              <li>
+                <strong><%= trip.title %></strong><br><%= trip.planner.first_name %> <%= trip.planner.last_name %>
+              </li>
+            <% end %>
           <% end %>
         <% end %>
       </ul>
-    <% end %>
+    </div>
   </div>
-  <div class="my_messages column">
-
-
-
-    <%= "Tripper : #{@trip.tripper.first_name} (#{@trip.tripper.id})" %><br>
-    <%= "Planner : #{@trip.planner.first_name} (#{@trip.planner.id})" %><br>
-    <%= "current_user : #{current_user.first_name} (#{current_user.id})" %>
-    <div class="messages">
-      <% @trip.messages.each do |message| %>
-        <div class="message <%= current_user.id == message.user_id ? " right" : "left" %>" id="message-<%= message.id %>">
-          <small>
-            <strong><%= message.user.first_name  %></strong>
-            <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
-          </small>
-          <p><%= message.content %></p>
-        </div>
+  <div class="my_messages column" id="column2">
+    <div class="scrollable-content">
+      <a href="#last_right">Aller à la section 1</a>
+      <%= "Tripper : #{@trip.tripper.first_name} (#{@trip.tripper.id})" %><br>
+      <%= "Planner : #{@trip.planner.first_name} (#{@trip.planner.id})" %><br>
+      <%= "current_user : #{current_user.first_name} (#{current_user.id})" %>
+      <div class="messages">
+        <% rr = @trip.messages.sort_by(&:created_at) %>
+        <% rr.each do |message| %>
+          <div class="message <%= current_user.id == message.user_id ? " right" : "left" %>" id="message-<%= message.id %>">
+            <small>
+              <strong><%= message.user.first_name  %></strong>
+              <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
+            </small>
+            <p <%= message == @trip.messages.last ? "id=mid_scroll_right" : nil %>><%= message.content %></p>
+          </div>
+        <% end %>
+      </div>
+      <%= simple_form_for [@trip, @new_message], url: my_trip_messages_path(@trip.id) do |f| %>
+        <%= f.input :content, as: :text, input_html: { id: 'new_messages' }, label: false %>
+        <%= f.button :submit, id: 'btn_new_messages', value: ">" %>
       <% end %>
     </div>
-    <div id="new_messages">
-
-    </div>
-
-
   </div>
-  <div class="my_trips column">
+  <div class="my_trips column" id="column3">
+    <div class="scrollable-content">
 
-
-  <h1><strong><%= @trip.planner.first_name %> <%= @trip.planner.last_name %></strong></h1>
-  <h2><strong><%= @trip.title %></strong></h2>
-  <p><%= @trip.comment %></p>
-  <%= image_tag @trip.image_url, style:"width: 100%;" %>
-  <div class="destinations">
-    <% @trip.trip_destinations.each do |trip_destination| %>
-      <div class="destination">
-        <h4><strong><%= trip_destination.destination.address %></strong></h4>
-        <p><%= trip_destination.destination.description %></p>
+      <h1><strong><%= @trip.planner.first_name %> <%= @trip.planner.last_name %></strong></h1>
+      <h2><strong><%= @trip.title %></strong></h2>
+      <p><%= @trip.comment %></p>
+      <%= image_tag @trip.image_url, style:"width: 100%;" %>
+      <div class="destinations">
+        <% @trip.trip_destinations.each do |trip_destination| %>
+          <div class="destination">
+            <h4><strong><%= trip_destination.destination.address %></strong></h4>
+            <p><%= trip_destination.destination.description %></p>
+          </div>
+        <% end %>
       </div>
-    <% end %>
-  </div>
-
-
+    </div>
   </div>
 </div>
-
-    <%# t.bigint "planner_id"
-    t.bigint "tripper_id"
-    t.string "title"
-    t.string "image_url"
-    t.text "comment"
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
-    t.bigint "trip_id"
-    t.integer "budget", default: 10
-    t.string "city"
-    t.index ["planner_id"], name: "index_trips_on_planner_id"
-    t.index ["trip_id"], name: "index_trips_on_trip_id"
-    t.index ["tripper_id"], name: "index_trips_on_tripper_id" %>
+<%= render "layouts/footer", position: "absolute" %>
