working on changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,5 @@
 @import "components/homepage";
 
 @import "components/show";
-@import "components/searchbar"
+@import "components/searchbar";
+@import "components/_planner/index";
