--- a/app/assets/stylesheets/components/_planner/index.scss
+++ b/app/assets/stylesheets/components/_planner/index.scss
@@ -1,10 +1,3 @@
-/* Styles for the container */
-.my-trips-container-custom {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
 /* Styles for the title section */
 .title-div-planner-index-custom {
   text-align: center;
@@ -16,13 +9,12 @@
   }
 }
 
-/* Styles for the card section */
-.card-main-custom {
-  display: flex;
+/* Trying stuff */
+/*.card-main-custom {
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
-}
+}*/
 
 .card-index-custom {
   background-color: #fff;
@@ -48,6 +40,7 @@
       font-size: 18px;
       color: #333;
       margin-bottom: 10px;
+      text-align: center;
     }
 
     p {
