--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -4,7 +4,7 @@
   background-color: $very-light-green;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  max-width: 800px;
+  width: 1000px;
   margin: 0 auto;
 
   h1 {
