planner/trips#show done

--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -18,6 +18,12 @@
     text-align: left;
   }
 
+  h3{
+    font-size: 22px;
+    color: black;
+    text-align: left;
+  }
+
   p {
     font-size: 16px;
     margin-top: 10px;
