--- a/app/assets/stylesheets/components/_homepage.scss
+++ b/app/assets/stylesheets/components/_homepage.scss
@@ -2,12 +2,21 @@
   margin: 0 150px;
 
   h2{
-    margin-top: 30px;
+    margin-top: 20px;
+    font-family: 'Abril Fatface';
+    color: $dark-green;
   }
 }
 
+// .button-dark-green {
+//   posistion: relative;
+//   left: -300px;
+// }
+
 .card-container {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
