--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -1,6 +1,6 @@
 .searchbar {
-  border: 2px solid $yellow;
-  // box-shadow: 0 0 0 2px $yellow;
+  height: 45px;
+  box-shadow: 0 0 0 2px $yellow;
 }
 
 .button-dark-green {
@@ -17,4 +17,16 @@
 
 .w-15 {
   width: 15%;
+}
+
+.searchbar-wrapper {
+  flex: 2;
+  position: relative;
+
+}
+
+.searchbar-button {
+  position: absolute;
+  left: 82.5%;
+  height: 45px;
 }
