working on the new form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,4 @@
 @import "components/show";
 @import "components/searchbar";
 @import "components/_planner/index";
+@import "components/_planner/form";
