--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -1,5 +1,5 @@
 .container{
-  text-align: center;
+  text-align: left;
   padding: 20px;
   background-color: $very-light-green;
   border-radius: 5px;
@@ -14,7 +14,7 @@
 
   h2 {
     font-size: 24px;
-    color: $green;
+    color: $dark-green;
     text-align: left;
   }
 
