--- a/app/views/planner/trips/_destination_form.html.erb
+++ b/app/views/planner/trips/_destination_form.html.erb
@@ -3,6 +3,6 @@
   <%= f.input :address %>
   <%= f.input :description %>
   <%#= f.input :position %>
-  <button type="button" data-action="nested-form#remove">Remove destination</button>
+  <button class="button-green" type="button" data-action="nested-form#remove">Remove destination</button>
   <%= f.hidden_field :_destroy %>
 </div>
