--- a/app/views/layouts/_budgetslider.html.erb
+++ b/app/views/layouts/_budgetslider.html.erb
@@ -1,24 +1,29 @@
-<div class="budget-slider">
-  <h4 range-title>Budget</h4>
-    <div class="range-slider">
-      <span class="slider-track"></span>
-      <input type="range" min="0" max="5000" value="2000" class="range" id="min">
-      <input type="range" min="5001" max="10000" value="8000" class="range" id="max">
-      <div class="tooltip min-tooltip"></div>
-      <div class="tooltip max-tooltip"></div>
+    <h4>Budget</h4>
+<div class="wrapper">
+  <header>
+  </header>
+  <div class="price-input">
+    <div class="field">
+      <span>Min</span>
+      <input type="number" class="input-min" value="100">
     </div>
-    <%# <div class="input-box">
-      <div class="min-box">
-        <div class="input-wrap">
-          <span class="input-addon">€</span>
-          <input type="text" name="min-input" class="input-field min-input">
-        </div>
-      </div>
-      <div class="max-box">
-        <div class="input-wrap">
-          <span class="input-addon">€</span>
-          <input type="text" name="max-input" class="input-field max-input">
-        </div>
-      </div>
-    </div> %>
+
+    <div class="separator">-</div>
+
+    <div class="field">
+      <span>Max</span>
+      <input type="number" class="input-max" value="10000">
+    </div>
+  </div>
+
+
 </div>
+
+  <div class="slider">
+    <div class="progress">
+    </div>
+    <div cllass="range-input">
+      <input type="range" class="range-min" min="0" max="10000" value="100">
+      <input type="range" class="range-max" min="0" max="10000" value="10000">
+    </div>
+  </div>
