--- a/app/assets/stylesheets/components/_planner/_form.scss
+++ b/app/assets/stylesheets/components/_planner/_form.scss
@@ -33,3 +33,10 @@
   background: $very-dark-green;
   border-radius: 2px;
 }
+
+.custom-label{
+  font-size: 24px;
+  color: $dark-green;
+  text-align: left;
+  font-family: $headers-font;
+}
