--- a/app/views/planner/trips/new.html.erb
+++ b/app/views/planner/trips/new.html.erb
@@ -1,16 +1,16 @@
 <div class="container">
   <h1>Tell us about your trip</h1>
   <%= simple_form_for [:planner, @trip],  data: { controller: 'nested-form', nested_form_wrapper_selector_value: '.nested-form-wrapper' } do |f| %>
-    <h2><%= f.input :title, placeholder: 'Title of your Trip', wrapper_html: { class: "custom-wrapper" }, input_html: { class: "custom-input"} %></h2>
-    <h2><%= f.input :comment, placeholder: 'An amazing trip', wrapper_html: { class: "custom-wrapper" } %></h2>
-    <h2><%= f.input :budget, input_html: { min: '0', step: 'any' }, placeholder: 'For the trip'%></h2>
-    <h2><%= f.input :city, placeholder: 'Bordeaux' %></h2>
-    <h2><%= f.input :style,
+    <%= f.input :title, placeholder: 'Title of your Trip', wrapper_html: { class: "custom-wrapper" }, input_html: { class: "custom-input"}, label_html: { class: "custom-label"} %>
+    <%= f.input :comment, placeholder: 'An amazing trip', wrapper_html: { class: "custom-wrapper" }, label_html: { class: "custom-label"}  %>
+    <%= f.input :budget, input_html: { min: '0', step: 'any' }, placeholder: 'For the trip', label_html: { class: "custom-label"} %>
+    <%= f.input :city, placeholder: 'Bordeaux', label_html: { class: "custom-label"}  %>
+    <%= f.input :style,
       collection: Trip::STYLES,
       as: :check_boxes,
       label: 'Select trip style',
       input_html: { class: "tag-selector" },
-      item_wrapper_class: 'tag-item' %></h2>
+      item_wrapper_class: 'tag-item' %>
     <%= f.input :photo, class: "upload-photo form-control", input_html: { class: 'd-none' }, label_html: { class: 'upload-photo'}, label: '📷 Upload a photo' %>
 
     <template data-nested-form-target="template">
