--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,4 @@
-<%= render "/layouts/navbar", hauteur: "20"  %>
-<%= render "layouts/searchbar" %>
+<%= render "/layouts/navbar", hauteur: "100", searchbar: true %>
 
 <div class="content my-3">
   <h2 class="text-center pb-4">Our recommandations of the day:</h2>
