--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -4,6 +4,7 @@
   font-weight: bold;
   border: none;
   padding: 10px 20px;
+  width: 120px;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
