--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,8 @@
+
+nav {
+  background-color: $dark-green;
+}
+
 .navbar-nav a {
   color: white;
   text-decoration: none;
@@ -11,10 +16,8 @@
   color: white;
   font-weight: bold;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
-  margin-left: 10px;
-  position: absolute;
-  top: 10;
-  left: 150px;
+  width: 100%;
+  text-align: center;
 }
 
 .navbar-top {
@@ -23,6 +26,13 @@
   justify-content: space-between;
   margin-top: 30px;
   margin-bottom: 20px;
+}
+
+.navbar-middle {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+
 }
 
 .img-navbar-height-100 {
