--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,4 +1,4 @@
-<%= render "/layouts/navbar", hauteur: "20"  %>
+<%= render "/layouts/navbar", hauteur: "100", searchbar: false    %>
 
 <div class="container">
   <h1><strong><%= @trip.planner.first_name %> <%= @trip.planner.last_name %></strong></h1>
@@ -16,7 +16,7 @@
   </div>
 
   <div class="button-container">
-    <%= link_to 'Contact the planner', planner_trips_path(trip_id:@trip.id), class: "link-btn-container button-dark-green-show", data: { turbo_method: :post } %>
+    <%= link_to 'Contact the planner', my_trips_path(trip_id:@trip.id), class: "link-btn-container button-dark-green-show", data: { turbo_method: :post } %>
   </div>
 
 </div>
