--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,41 +14,41 @@
 
 <div class="content my-3">
   <div class="block-container">
-  <h2 class="pb-4">Most searched destinations:</h2>
-  <div class="card-container">
-    <div class="travel-card">
-      <%= image_tag('santorini.jpg', width: 150, height: 150) %>
-      <p class="city-name">Santorin</p>
-    </div>
-    <div class="travel-card">
-      <%= image_tag('tokyo.jpg', width: 150, height: 150) %>
-      <p class="city-name">Tokyo</p>
-    </div>
-    <div class="travel-card">
-      <%= image_tag('bali.jpg', width: 150, height: 150) %>
-      <p class="city-name">Bali</p>
-    </div>
-
-    <div class="block-container">
-      <h2 class="pb-4">Our recommandations of the day:</h2>
+    <h2 class="pb-4">Most searched destinations:</h2>
       <div class="card-container">
-      <div class="travel-card">
-        <%= image_tag('rio.jpeg', width: 150, height: 150) %>
-        <p class="city-name">Rio de Janeiro</p>
+        <div class="travel-card">
+          <%= image_tag('santorini.jpg', width: 150, height: 150) %>
+          <p class="city-name">Santorin</p>
+        </div>
+        <div class="travel-card">
+          <%= image_tag('tokyo.jpg', width: 150, height: 150) %>
+          <p class="city-name">Tokyo</p>
+        </div>
+        <div class="travel-card">
+          <%= image_tag('bali.jpg', width: 150, height: 150) %>
+          <p class="city-name">Bali</p>
+        </div>
       </div>
-      <div class="travel-card">
-        <%= image_tag('el-calafate.jpg', width: 150, height: 150) %>
-        <p class="city-name">El Calafate</p>
-      </div>
-      <div class="travel-card">
-        <%= image_tag('petra.jpeg', width: 150, height: 150) %>
-        <p class="city-name">Petra</p>
+
+      <div class="block-container">
+        <h2 class="pb-4">Our recommandations of the day:</h2>
+        <div class="card-container">
+          <div class="travel-card">
+            <%= image_tag('rio.jpeg', width: 150, height: 150) %>
+            <p class="city-name">Rio de Janeiro</p>
+          </div>
+          <div class="travel-card">
+            <%= image_tag('el-calafate.jpg', width: 150, height: 150) %>
+            <p class="city-name">El Calafate</p>
+          </div>
+          <div class="travel-card">
+            <%= image_tag('petra.jpeg', width: 150, height: 150) %>
+            <p class="city-name">Petra</p>
+          </div>
+        </div>
       </div>
     </div>
-
-
-
   </div>
 </div>
 
-<%= render "layouts/footer", position: "absolute" %>
+<%= render "layouts/footer", position: "relative" %>
