--- a/app/views/layouts/_budgetslider.html.erb
+++ b/app/views/layouts/_budgetslider.html.erb
@@ -1,13 +1,4 @@
-<div class="budget-slider">
-  <h4 range-title>Budget</h4>
-    <div class="range-slider">
-      <span class="slider-track"></span>
-      <input type="range" min="0" max="5000" value="2000" class="range" id="min">
-      <input type="range" min="5001" max="10000" value="8000" class="range" id="max">
-      <div class="tooltip min-tooltip"></div>
-      <div class="tooltip max-tooltip"></div>
-    </div>
-    <%# <div class="input-box">
+    <div class="input-box">
       <div class="min-box">
         <div class="input-wrap">
           <span class="input-addon">€</span>
@@ -20,5 +11,14 @@
           <input type="text" name="max-input" class="input-field max-input">
         </div>
       </div>
-    </div> %>
+    </div>
+<div class="budget-slider">
+  <h4 range-title>Budget</h4>
+    <div class="range-slider">
+      <span class="slider-track"></span>
+      <input type="range" min="0" max="5000" value="2000" class="range" id="min">
+      <input type="range" min="5001" max="10000" value="8000" class="range" id="max">
+      <div class="tooltip min-tooltip"></div>
+      <div class="tooltip max-tooltip"></div>
+    </div>
 </div>
