--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,4 @@
-<%= render "/layouts/navbar", hauteur: "100", searchbar: true %>
-
+<%= render "/layouts/navbar", hauteur: "100", searchbar: false %>
 
 <div class="content my-3">
   <div class="block-container">
