--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
         <h2 class="pb-4">Our recommandations of the day:</h2>
         <div class="card-container">
           <div class="travel-card">
-            <%= image_tag('rio.jpeg', width: 150, height: 150) %>
+            <%= image_tag('rio.jpg', width: 150, height: 150) %>
             <p class="city-name">Rio de Janeiro</p>
           </div>
           <div class="travel-card">
@@ -30,7 +30,7 @@
             <p class="city-name">El Calafate</p>
           </div>
           <div class="travel-card">
-            <%= image_tag('petra.jpeg', width: 150, height: 150) %>
+            <%= image_tag('petra.jpg', width: 150, height: 150) %>
             <p class="city-name">Petra</p>
           </div>
         </div>
