added the avatar with dropdown menu

--- a/app/views/planner/trips/index.html.erb
+++ b/app/views/planner/trips/index.html.erb
@@ -1,4 +1,4 @@
-<%= render "/layouts/navbar", hauteur: "100" %>
+<%= render "/layouts/navbar", hauteur: "100", searchbar: false %>
 <div class=" my-trips-container-custom">
   <div class="container card-main-custom ">
   <div class="title-div-planner-index-custom">
@@ -27,4 +27,4 @@
   </div>
 </div>
 
-<%= render "layouts/footer", position: "relative" %>
+<%= render "layouts/footer", position: "absolute" %>
