--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -2,6 +2,7 @@
   background-color: $light-green;
   color: white;
   font-weight: bold;
+  margin-right: 30px;
   border: none;
   padding: 10px 20px;
   width: 120px;
